--- a/.tekton/listener.yaml
+++ b/.tekton/listener.yaml
@@ -1,4 +1,4 @@
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: TriggerTemplate
 metadata:
   name: template
@@ -22,7 +22,7 @@ spec:
       description: The Kubernetes cluster namespace
       default: prod
   resourcetemplates:
-    - apiVersion: tekton.dev/v1alpha1
+    - apiVersion: tekton.dev/v1beta1
       kind: PipelineRun
       metadata:
         name: pipelinerun-$(uid)
@@ -47,7 +47,7 @@ spec:
         - name: clusterNamespace
           value: $(params.clusterNamespace)
 ---
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: TriggerBinding
 metadata:
   name: binding
@@ -56,7 +56,7 @@ spec:
     - name: repository
       value: "https://github.com/skaegi/hello-containers"
 ---
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: EventListener
 metadata:
   name: listener
