--- a/.tektonpriv/listener.yaml
+++ b/.tektonpriv/listener.yaml
@@ -1,4 +1,4 @@
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: TriggerTemplate
 metadata:
   name: templatepriv
@@ -7,7 +7,7 @@ spec:
     - name: dummy
       default: prod
   resourcetemplates:
-    - apiVersion: tekton.dev/v1alpha1
+    - apiVersion: tekton.dev/v1beta1
       kind: PipelineRun
       metadata:
         name: pipelinerun-$(uid)
@@ -16,7 +16,7 @@ spec:
           name: pipelinepriv
 
 ---
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: TriggerBinding
 metadata:
   name: bindingpriv
@@ -25,7 +25,7 @@ spec:
     - name: dummy
       value: "https://github.com/skaegi/hello-containers"
 ---
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: EventListener
 metadata:
   name: listenerprivgg
