--- a/.tekton/listener.yaml
+++ b/.tekton/listener.yaml
@@ -22,17 +22,6 @@ spec:
       description: The Kubernetes cluster namespace
       default: prod
   resourcetemplates:
-    - apiVersion: v1
-      kind: PersistentVolumeClaim
-      metadata:
-        name: pipelinerun-$(uid)-pvc
-      spec:
-        resources:
-          requests:
-            storage:  5Gi
-        volumeMode: Filesystem
-        accessModes:
-          - ReadWriteOnce
     - apiVersion: tekton.dev/v1beta1
       kind: PipelineRun
       metadata:
@@ -40,11 +29,9 @@ spec:
       spec:
         pipelineRef:
             name: pipeline
-        workspaces:
-          - name: pipeline-pvc
-            persistentVolumeClaim:
-              claimName: pipelinerun-$(uid)-pvc
         params:
+        - name: pipeline-pvc
+          value: pipelinerun-$(uid)-pvc
         - name: repository
           value: $(params.repository)
         - name: apikey
@@ -67,9 +54,7 @@ metadata:
 spec:
   params:
     - name: repository
-      value: "https://github.com/briangleeson/KEEP-pipeline-tests-resources"
-    - name: revision
-      value: "hello-containers_master"
+      value: "https://github.com/skaegi/hello-containers"
 ---
 apiVersion: tekton.dev/v1beta1
 kind: EventListener
