--- a/.tekton/listener.yaml
+++ b/.tekton/listener.yaml
@@ -22,6 +22,17 @@ spec:
       description: The Kubernetes cluster namespace
       default: prod
   resourcetemplates:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
+        name: pipelinerun-$(uid)-pvc
+      spec:
+        resources:
+          requests:
+            storage:  5Gi
+        volumeMode: Filesystem
+        accessModes:
+          - ReadWriteOnce
     - apiVersion: tekton.dev/v1beta1
       kind: PipelineRun
       metadata:
@@ -29,9 +40,11 @@ spec:
       spec:
         pipelineRef:
             name: pipeline
+        workspaces:
+          - name: pipeline-pvc
+            persistentVolumeClaim:
+              claimName: pipelinerun-$(uid)-pvc
         params:
-        - name: pipeline-pvc
-          value: pipelinerun-$(uid)-pvc
         - name: repository
           value: $(params.repository)
         - name: apikey
@@ -54,7 +67,9 @@ metadata:
 spec:
   params:
     - name: repository
-      value: "https://github.com/skaegi/hello-containers"
+      value: "https://github.com/idsb3t1/KEEP-pipeline-tests-resources"
+    - name: revision
+      value: "hello-containers_master"
 ---
 apiVersion: tekton.dev/v1beta1
 kind: EventListener
