--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -36,7 +36,7 @@ spec:
       args:
         - set -e -o pipefail;
           echo "Cloning $REPOSITORY";
-          git clone -q -b $REVISION $REPOSITORY .;
+          cd /workspace && git clone -q -b $REVISION $REPOSITORY .;
     - name: pre-build-check
       image: ibmcom/pipeline-base-image
       env:
@@ -121,7 +121,7 @@ spec:
       args:
         - set -e -o pipefail;
           echo "Cloning $REPOSITORY";
-          git clone -q -b $REVISION $REPOSITORY .;
+          cd /workspace && git clone -q -b $REVISION $REPOSITORY .;
     - name: check-vulnerabilities
       image: ibmcom/pipeline-base-image
       env:
@@ -180,7 +180,7 @@ spec:
       args:
         - set -e -o pipefail;
           echo "Cloning $REPOSITORY";
-          git clone -q -b $REVISION $REPOSITORY .;
+          cd /workspace && git clone -q -b $REVISION $REPOSITORY .;
     - name: pre-deploy-check
       image: ibmcom/pipeline-base-image
       env:
