--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -57,7 +57,11 @@ spec:
         - set -e -o pipefail;
           ibmcloud login -a $API -r $REGION;
           export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh";
+          ls -a;
           cd /workspace;
+          ls -a;
+          cd /artifacts;
+          ls -a;
           source pre-build-check.sh;
     - name: build-docker-image
       image: ibmcom/pipeline-base-image
