--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -8,7 +8,7 @@ spec:
       description: the git repo
     - name: revision
       description: the revision
-      default: master
+      default: hello-containers_master
     - name: apikey
       description: the ibmcloud api key
     - name: api
@@ -57,10 +57,7 @@ spec:
         - set -e -o pipefail;
           ibmcloud login -a $API -r $REGION;
           export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh";
-          ls -a;
           cd /workspace;
-          ls -a;
-          cd /artifacts;
           ls -a;
           source pre-build-check.sh;
     - name: build-docker-image
@@ -103,7 +100,7 @@ spec:
       description: the git repo
     - name: revision
       description: the revision
-      default: master
+      default: hello-containers_master
     - name: apikey
       description: the ibmcloud api key
     - name: api
@@ -143,6 +140,7 @@ spec:
         - set -e -o pipefail;
           ibmcloud login -a $API -r $REGION;
           while read line; do export $line; done < /artifacts/build.properties;
+          cd /workspace;
           cp /artifacts/build.properties .;
           source check-vulnerabilities.sh || true;
 ---
@@ -156,7 +154,7 @@ spec:
       description: the git repo
     - name: revision
       description: the revision
-      default: master
+      default: hello-containers_master
     - name: apikey
       description: the ibmcloud api key
     - name: api
@@ -209,6 +207,7 @@ spec:
           ibmcloud login -a $API -r $REGION;
           $(ibmcloud ks cluster config --cluster "${PIPELINE_KUBERNETES_CLUSTER_NAME}" --export);
           while read line; do export $line; done < /artifacts/build.properties;
+          cd /workspace;
           cp /artifacts/build.properties .;
           source pre-deploy-check.sh;
     - name: deploy-to-kubernetes
