--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -93,8 +93,10 @@ spec:
           export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh";
           export GIT_COMMIT=$(git rev-parse HEAD);
           export REGISTRY_URL=$(ibmcloud cr info | sed "2q;d" | awk '{for(i=1;i<=NF;i++) if ($i=="Registry") print $(i+1)}');
+          export IBM_CLOUD_API_KEY=$IBMCLOUD_API_KEY;
+          echo $IBM_CLOUD_API_KEY;
           cd /workspace;
-          source <(curl -sSL "https://raw.githubusercontent.com/open-toolchain/commons/master/scripts/build_image_buildkit.sh")
+          source build-docker-image.sh;
 ---
 apiVersion: tekton.dev/v1beta1
 kind: Task
